mount src dir to host machine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: ./web
     volumes:
       - ./web/downloads:/var/www/downloads/
+      - ./web/:/usr/src/app
     links:
       - redis
 
