--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,6 +2,11 @@ server {
 	listen 80 default_server;
 	server_name _;
 
+    location /ariang {
+        alias /usr/share/nginx/html;
+        index index.html;
+    }
+
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
