install aria2 in container

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,8 +1,11 @@
 FROM python:3
 
-WORKDIR /usr/src/app
+RUN apt-get update
+RUN apt-get install -y aria2
+COPY aria2.conf /root/.aria2/
 
+WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD gunicorn --workers=2 -b 0.0.0.0:8000 --reload index:app
+CMD aria2c && gunicorn --workers=2 -b 0.0.0.0:8000 --reload index:app
