--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -17,4 +17,14 @@ server {
     location ~ /\.ht {
 		deny all;
 	}
+server {
+    listen 6800;
+    server_name localhost;
+
+    location / {
+        proxy_pass http://web:6800;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
