--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,3 +2,4 @@ FROM nginx
 
 COPY ./conf.d/default.conf /etc/nginx/conf.d/default.conf
 COPY ./ariang /usr/share/nginx/html/
+COPY ./htpasswd /etc/nginx/.htpasswd
