--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,21 +2,21 @@ server {
 	listen 80 default_server;
 	server_name _;
 
+    auth_basic "Login required";
+    auth_basic_user_file /etc/nginx/.htpasswd;
+
     location /ariang {
         alias /usr/share/nginx/html;
         index index.html;
     }
-
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
+}
 
-    location ~ /\.ht {
-		deny all;
-	}
 server {
     listen 6800;
     server_name localhost;
