set init aria2 rpc secret in AriaNg
replace secret:”” with secret:”base64_encoded_passwd” in the dist js code

https://github.com/mayswind/AriaNg/blob/620f5b99a8e9244fdebc56937c15902afadee421/src/scripts/config/constants.js#L34

--- a/web/aria2.conf
+++ b/web/aria2.conf
@@ -1,11 +1,10 @@
-rpc-secret=vjlfybgtrkn
+rpc-secret=LXd3I5fVikq6vhMP9XY
 
 enable-rpc=true
 rpc-allow-origin-all=true
 rpc-listen-all=true
 daemon=true
 rpc-listen-port=6800
-
 dir=/var/www/downloads/
 continue=true
 max-connection-per-server=16
